# SoftArch-Assignment5

tweet/: .env  README.md  docker-compose.yml  pyproject.toml
tweet/alembic/: env.py
tweet/alembic/versions/: 2024_10_09_2307-372efd2de140_.py
tweet/src/: settings.py
tweet/src/api/: endpoints.py  main.py  schemas.py  utils.py
tweet/src/db/: __init__.py  base.py  models.py  repository.py
tweet/src/service/: schemas.py  tweet.py
users/: .env  .pylintrc  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
users/alembic/: env.py
users/alembic/versions/: 2024_10_07-82f27951a272_add_user_table.py
users/src/: settings.py
users/src/api/: dependencies.py  exceptions.py  main.py  schemas.py  users.py  utils.py
users/src/models/: __init__.py  base.py  orm_models.py  repository.py
users/src/service/: exceptions.py  schemas.py  service.py
